gradle native build caching

--- a/src/main/docker/Dockerfile.native-distroless
+++ b/src/main/docker/Dockerfile.native-distroless
@@ -4,7 +4,7 @@ RUN gu install native-image
 
 WORKDIR /src
 
-COPY gradle* /src/
+COPY gradle.* *.gradle gradlew /src/
 COPY gradle/ /src/gradle
 
 RUN ./gradlew --version
