--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 # no specific test port needed -> automatically assign
 quarkus.http.test-port=0
 quarkus.native.native-image-xmx=4g
+quarkus.swagger-ui.always-include=true
